# f446-softser

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  README.md  f446-softser.ioc
App/: bitrev.h  cctest.c  implx86.c  memory-os.c  ptrtest.c  queuetest.c  rstest.c
Inc/: buffer.h  crc16.h  debug.h  devincludes.h  drv.h  fec.h  lock.h  mac-frame.h  mac.h  macros.h  memory.h  nibble.h  opt.h  phy-old.h  phy.h  queue.h  random.h  rs.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  thread.h  tim.h
MDK-ARM/: f446-softser.uvprojx  startup_stm32f446xx.s
MDK-ARM/RTE/: RTE_Components.h
MDK-ARM/RTE/CMSIS/: RTX_Conf_CM.c
Src/: adc.c  buffer.c  crc16.c  drv.c  fec.c  gpio.c  mac.c  main.c  memory.c  opt.c  phy-old.c  phy.c  queue.c  random.c  rs.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  thread.c  tim.c  usart.c
Unused/: mac-old.c  mac-old.h  phy-old.c  phy-old.h
